# gazprea-compiler

./: .gitignore  PLAN.md  README.md  compile.sh  input_test.sh  run_test.sh
.github/workflows/: ci.yaml
MeetingNotes/: ScrumNov18  ScrumOct24  ScrumOct29
grammar/: Gazprea.g4
grammar/.antlr/: Gazprea.interp  Gazprea.tokens  GazpreaBaseListener.java  GazpreaLexer.interp  GazpreaLexer.java  GazpreaLexer.tokens  GazpreaListener.java  GazpreaParser.java
include/: AST.h  ASTBuilder.h  ASTBuilderUtils.h  ASTPrinter.h  ASTVisitor.h  ASTbuilder.h  BackEnd.h  CompileTimeExceptions.h  ConstantFolding.h  ConstantHelpers.h  ErrorListener.h  MLIRgen.h  Scope.h  SemanticAnalysisVisitor.h  Types.h
include/MLIR/helpers/: compHelper.h
runtime/src/: CMakeLists.txt  placeholder.c  runtime.c
src/: AST.cpp  ASTBuilder.cpp  ASTBuilderUtils.cpp  ASTPrinter.cpp  BackEnd.cpp  CMakeLists.txt  ConstantFolding.cpp  ConstantHelpers.cpp  MLIRgen.cpp  Scope.cpp  SemanticAnalysisVisitor.cpp  Types.cpp  main.cpp
src/AST/: AST.cpp  ASTBuilder.cpp  ASTBuilderUtils.cpp  ASTPrinter.cpp  array.cpp  controlFlow.cpp  func.cpp  ops.cpp  struct.cpp  tuple.cpp
src/MLIR/: alias.cpp  array.cpp  arrays.cpp  assign.cpp  base.cpp  comp.cpp  controlFlow.cpp  dec.cpp  func.cpp  funcStat.cpp  io.cpp  literal.cpp  ops.cpp  struct.cpp  tuple.cpp
src/MLIR/helpers/: castHelper.cpp  compHelper.cpp  funcHelper.cpp  varHelper.cpp
tests/: CIConfig.json  GazpreaCompileConfig.json
tests/arrays/: array_const.in  array_const.out  array_decl.in
tests/testfiles/: notImplemented.txt
tests/testfiles/arrays/: array_alias.in  array_cast.in  array_cast.out  array_char.in  array_char.out  array_const.in  array_const.out  array_decl.in  array_dot.in  array_dynamic_alloc.in  array_element_assign.in  array_element_assign.out  array_empty.in  array_gen.in  array_gen.out  array_inferred_no_init.in  array_inferred_no_init.out  array_len_mismatch.in  array_len_mismatch.out  array_ops.in  array_ops.out  array_scalar.in  array_scalar.out  array_zero_init_print.in  array_zero_init_print.out  simple_array_init.in  simple_array_print.in  simple_array_print.out
tests/testfiles/arraytype-operators/: array_division_basic.in  array_division_basic.out  array_ops.out  array_scalar.in  array_scalar.out  dynamic_dot_product.in  dynamic_matrix_mul.in  equality_ops.in  equality_ops.out  explicit_broadcast_cast.in  explicit_broadcast_cast.out  generators.in  generators.out  matrix_basic.in  matrix_basic.out  matrix_mul.in  matrix_mul.out  matrix_vector_division_mix.in  matrix_vector_division_mix.out  mixed_promo.in  mixed_promo.out  scalar_promo.in  scalar_promo.out  slice_stride.in  slice_stride.out  vectorAdd.in  vector_basic.in  vector_basic_append.in  vector_basic_append.out  vector_dot.in  vector_dot_dynamic.in
tests/testfiles/comp/: eq.in  ge.in  gt.in  le.in  lt.in  mixed_real.in  ne.in
tests/testfiles/complex/: complex1.in  complex1.out  complex10.in  complex10.out  complex11.in  complex11.out  complex2.in  complex2.out  complex3.in  complex3.out  complex4.in  complex4.out  complex5.in  complex5.out  complex6.in  complex6.out  complex7.in  complex8.in  complex8.out  complex9.in  complex9.out
tests/testfiles/declarations/: declarationNotBeginBlock.in  declarationNotBeginBlock.out  globalIntDeclaration.in  inferredIntDeclaration.in  integerDeclaration.in  mainDeclaration.in  mainDeclaration.out  mainDeclarationMissing.in
tests/testfiles/errors/: aliasingError.in  aliasingError.out  assignError.in  assignError.out  callError.in  callError.out  compileErrors  globalError.in  globalError.out  globalVarError.in  globalVarError.out  globalVector.in  globalVector.out  indexError.in  indexError.out  literalError.in  literalError.out  mainError.in  mainError.out  mathError.in  mathError.out  nonScalarGlobal.in  nonScalarGlobal.out  returnError.in  returnError.out  sizeError.in  sizeError.out  statementError.in  statementError.out  strideError.in  strideError.out  symbolError.in  symbolError.out  syntaxError.in  syntaxError.out  typeError.in  typeError.out  zeroPower.in  zeroPower.out
tests/testfiles/functions-methods/: length_shape.in  length_shape.out  reverse_append.in  reverse_append.out  string_format_concat.in  string_format_concat.out  vector_push_len.in  vector_push_len.out
tests/testfiles/generators/: gen_2d_dyn_array_domain.in  gen_2d_nested.in  gen_2d_nested.out  gen_2d_simple.in  gen_2d_simple.out  gen_nested_complex.in  gen_nested_complex.out  gen_nested_index_expr.in  gen_nested_index_expr.out  gen_nested_quad.in  gen_nested_quad.out  gen_nested_slice_simple.in  (+8 more)
(+222 files in other folders)
